--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -308,6 +308,8 @@
                     android:background="@color/colorGray" />
 
                 <TextView
+                    android:id="@+id/txtXemTatCaNhanXet"
+                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="10dp"
