--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -309,9 +309,9 @@
 
                 <TextView
                     android:id="@+id/txtXemTatCaNhanXet"
-                    android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:padding="10dp"
                     android:text="Xem tất cả nhận xét"
                     android:textAlignment="center"
@@ -362,6 +362,7 @@
             android:text="MUA NGAY" />
 
         <ImageButton
+            android:id="@+id/imgThemGioHang"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="3"
