--- a/app/src/main/res/layout/custom_layout_giohang.xml
+++ b/app/src/main/res/layout/custom_layout_giohang.xml
@@ -22,8 +22,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="5dp">
+            android:layout_margin="5dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgHinhHinhGioHang"
@@ -50,6 +50,7 @@
                         android:id="@+id/txtTieuDeGioHang"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
                         android:ellipsize="end"
                         android:maxLines="2"
@@ -60,6 +61,7 @@
                         android:id="@+id/txtGiaGioHang"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
                         android:layout_marginTop="5dp"
 
                         android:text="Giá tiền"
@@ -73,6 +75,53 @@
                         android:layout_marginTop="5dp"
                         android:textAlignment="center"
                         android:visibility="gone" />
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="10dp">
+
+                        <ImageButton
+                            android:id="@+id/imgGiamSoLuongSP"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorWhite"
+                            android:src="@drawable/ic_remove_black_24dp" />
+
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@color/colorGray" />
+
+                        <TextView
+                            android:id="@+id/txtSoLuongSanPham"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="0"
+                            android:textSize="15sp" />
+
+
+                        <View
+
+                            android:layout_width="1dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@color/colorGray" />
+
+                        <ImageButton
+                            android:id="@+id/imgTangSoLuongSP"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorWhite"
+                            android:src="@drawable/ic_add_black_24dp" />
+
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <ImageView
